组件化方案实践与总结

--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_android_name">android</string>
+    <string name="app_android_name">小杨kotlin</string>
 
 
     <!--wanAndroid kotlin-->
