在组件化切换时，优化application启动逻辑

--- a/gank/src/main/res/values/strings.xml
+++ b/gank/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_gank_name">gank</string>
+    <string name="app_gank_name">小杨gank</string>
 </resources>
