--- a/news/src/main/res/values/strings.xml
+++ b/news/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_news_name">news</string>
+    <string name="app_news_name">小杨新闻</string>
 </resources>
