--- a/ReadAndroidWiki/08.事件分发/05.View事件总结案例.md
+++ b/ReadAndroidWiki/08.事件分发/05.View事件总结案例.md
@@ -15,7 +15,7 @@
 
 ### 01.Android事件分发机制
 - 简述Android的事件分发机制？
-    - 事件分发顺序：Activty->ViewGroup->View
+    - 事件分发顺序：Activity->ViewGroup->View
     - 主要方法：dispatchTouchEvent-分发事件、onInterceptTouchEvent-当前View是否拦截该事件、onTouchEvent-处理事件
     - 1.父View调用dispatchTouchEvent开启事件分发。
     - 2.父View调用onInterceptTouchEvent判断是否拦截该事件，一旦拦截后该事件的后续事件(如DOWN之后的MOVE和UP)都直接拦截，不会再进行判断。
