--- a/ReadAndroidWiki/13.定位梳理/04.定位封装详细梳理.md
+++ b/ReadAndroidWiki/13.定位梳理/04.定位封装详细梳理.md
@@ -14,12 +14,16 @@
 
 ### 02.定位技术的一些思考
 - 定位的方式具体有哪些？定位具体是怎么实现的？是否有先后顺序？
-    - 定位方式：GPS定位，基站定位（sim卡），Wi-Fi定位，AGPS定位等等。
-    - 
-- 定位频繁调用，
+- 定位频繁调用，是怎么实现的，为何不会阻塞主线程？会造成卡顿吗？
+
 
 
 ### 03.定位的一些常识介绍
+- 定位的方式具体有哪些？定位具体是怎么实现的？是否有先后顺序？
+    - 定位方式：GPS定位，基站定位（sim卡），Wi-Fi定位，AGPS定位等等。
+- 定位频繁调用，是怎么实现的，为何不会阻塞主线程？会造成卡顿吗？
+    - 定位使用service，轮训操作
+
 
 
 ### 04.最简单的定位实践
