--- a/ReadAndroidWiki/13.定位梳理/08.定位封装详细梳理.md
+++ b/ReadAndroidWiki/13.定位梳理/08.定位封装详细梳理.md
@@ -27,13 +27,35 @@
 
 
 ### 04.最简单的定位实践
-#### 4.1 
+#### 4.1 GPS定位实践
+- 获取用户的当前位置：
+    - 1.在AndroidManifest.xml当中声明相应的权限；
+    - 2.获取LocationManager对象；
+    - 3.选择LocationProvider；
+    - 4.绑定LocationListener对象。
+- 获取定位信息的大概步骤思路
+    - 1.首先获取定位管理器LocationManager对象，然后需要判断是否有定位相关的权限。
+    - 2.获取位置提供器，GPS
+    - 3.获取上次的位置，一般第一次运行，此值为null
+        - 3.1 如果为null，从网络获取定位信息
+        - 3.2 获取经纬度，然后Geocoder通过经纬度获取具体信息
+    - 4.监视地理位置变化
 
 
 
+
+#### 4.2 基站定位实践
+
+
+#### 4.3 网络定位实践
 
 
 ### 05.为何要综合定位操作
+#### 5.1 综合定位实践
+
+
+
+
 
 
 ### 06.定位可靠性实践分析
