--- a/ReadAndroidWiki/09.多线程/07.Android线程池封装库.md
+++ b/ReadAndroidWiki/09.多线程/07.Android线程池封装库.md
@@ -34,6 +34,11 @@
 
 
 
+#### 1.2 遇到的需求
+- 如何在实际开发中配置线程的优先级
+- 开启一个线程，是否可以监听Runnable接口中run方法操作的过程，比如监听线程的状态开始，成功，异常，完成等多种状态。
+- 开启一个线程，是否可以监听Callable<T>接口中call()方法操作的过程，比如监听线程的状态开始，错误异常，完成等多种状态。
+
 
 ### 0.前言介绍
 - 轻量级线程池封装库，支持线程执行过程中状态回调监测(包含成功，失败，异常等多种状态)；支持创建异步任务，并且可以设置线程的名称，延迟执行时间，线程优先级，回调callback等；可以根据自己需要创建自己需要的线程池，一共有四种；线程异常时，可以打印异常日志，避免崩溃。
