--- a/Read/ReadMeWiki/00.方案实践/13.线程优化实践操作.md
+++ b/Read/ReadMeWiki/00.方案实践/13.线程优化实践操作.md
@@ -1,5 +1,6 @@
 #### 目录介绍
 - 01.线程优化的背景
+    - 1.1 实践背景说明
 - 02.线程使用的现状
     - 2.1 线程使用问题
     - 2.2 线程问题有哪些
@@ -28,6 +29,7 @@
 
 
 ### 01.线程优化的背景
+#### 1.1 实践背景说明
 
 
 ### 02.线程使用的现状
