--- a/Read/ReadFlutterWiki/02.基础知识/13.ListView深入分析.md
+++ b/Read/ReadFlutterWiki/02.基础知识/13.ListView深入分析.md
@@ -43,7 +43,8 @@
 
 ### 02.ListView局限性
 - 比如能够通过默认构造方式创建list列表吗？
-    - 默认构造函数有一个`children`参数，它接受一个Widget列表（List<Widget>）。这种方式适合只有少量的子widget的情况，因为这种方式需要将所有`children`都提前创建好（这需要做大量工作），而不是等到子widget真正显示的时候再创建。
+    - 默认构造函数有一个`children`参数，它接受一个Widget列表（List<Widget>）。
+    - 这种方式适合只有少量的子widget的情况，因为这种方式需要将所有`children`都提前创建好（这需要做大量工作），而不是等到子widget真正显示的时候再创建。
 - 注意：
     - 可滚动widget通过一个List<Widget>来作为其children属性时，只适用于子widget较少的情况，这是一个通用规律，并非ListView自己的特性，像GridView也是如此。
 - 那如何创建列表
