--- a/Read/ReadFlutterWiki/02.基础知识/29.Flutter资源管理.md
+++ b/Read/ReadFlutterWiki/02.基础知识/29.Flutter资源管理.md
@@ -1,4 +1,16 @@
 #### 目录介绍
+- 01.资源管理都有那些
+- 02.管理图片资源文件
+- 03.管理字体资源文件
+- 04.管理iconFont资源
+
+
+
+
+
+
+
+
 
 
 
@@ -221,6 +233,11 @@ flutter:
 
 ### 依赖管理
 https://www.jianshu.com/p/b6644594b4f9
+
+
+
+### 04.管理iconFont资源
+- https://www.jianshu.com/p/3ede6447ff93
 
 
 
