--- a/Read/ReadAndroidWiki/01.基础组件/16.Fragment填坑.md
+++ b/Read/ReadAndroidWiki/01.基础组件/16.Fragment填坑.md
@@ -264,6 +264,9 @@
 
 ### 04.处理返回键逻辑
 #### 4.1 使用transaction.addToBackStack(null)添加fragment
+- addToBackStack()方法的作用：
+    - 当移除或替换一个Fragment并向返回栈添加事务时，系统会停止（而非销毁）移除的Fragment。
+    - 如果用户执行回退操作进行Fragment的恢复，该Fragment将重新启动。如果不向返回栈添加事务，则系统会在移除或替换Fragment时将其销毁。
 - 先看下代码
     - 出现的问题是：在某个activity上添加fragment，不处理宿主activity中返回键逻辑，点击返回键，关闭了fragment同时也关闭了activity。
     ```
