--- a/Read/ReadMeWiki/00.性能监控/01.Android性能监测.md
+++ b/Read/ReadMeWiki/00.性能监控/01.Android性能监测.md
@@ -7,6 +7,22 @@
 - 06.功耗问题
 - 07.存储指标
 - 08.CPU指标
+- 10.性能工具
+
+
+### 00.性能检测
+### 0.1 性能优化原则
+- 坚持性能测试（开发和测试同学的测试方法略有不同）：不要凭感觉去检测性能问题、评估性能优化的效果，应该保持足够多的测量，用数据说话（主要针对测试同学）。使用各种性能工具测试及快速定位问题（主要针对开发同学）。
+- 使用低配置的设备：同样的程序，在低端配置的设备中，相同的问题会暴露得更为明显。
+- 权衡利弊：在能够保证产品稳定、按时完成需求的前提下去做优化。
+
+
+### 0.2 性能优化方法
+- 了解问题（分为可感知和不可感知的性能问题）：对于性能问题来讲，这个步骤只适用于某些明显的性能问题，很多无法感知的性能问题需要通过工具定位。例如：内存泄漏、层级冗杂、过度绘制等无法感知。滑动卡顿是可以感知到的。
+- 定位问题：通过工具检测、分析数据，定位在什么地方存在性能问题。
+- 分析问题：找到问题后，分析针对这个问题该如何解决，确定解决方案。
+- 解决问题：根据分析结果寻找解决方案。
+- 验证问题：保证优化有效，没有产生新的问题，以及产品稳定性。
 
 
 
@@ -123,6 +139,21 @@
 
 
 
+
+### 10.性能工具
+- Android常用的绘制优化工具一般有如下几种：
+    - Hierarchy View：查看Layout层次
+    - Android Studio自带的Profile CPU工具
+    - 静态代码检查工具Lint
+    - Profiler GPU Rendering
+    - TraceView
+    - Systrace
+    - Layout Inspector
+### 04.性能优化工具
+- 1、手机开发者选项：调试GPU过度绘制、启用严格模式、显示CPU使用情况、GPU呈现模式分析、显示所有"应用程序无响应"。（小米手机开发开发者选项中名字）
+- 2、IDE中：Android Studio，比如静态代码检测工具、Memory Monitor（内存）、CPU Monitor（CPU）、NetWork Monitor（网络）、GPU Monitor、Layout Inspector（布局）、Analyze APK等。
+- 3、SDK中：sdk\tools，比如DDMS、HierarchyViewer、TraceView等。
+- 4、第三方工具：MAT、LeakCanary（内存泄漏监控）、GT等。
 
 
 
