完善缓存查看工具

--- a/Read/ReadMeWiki/00.方案实践/01.组件化开发优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.组件化开发优化实践.md
@@ -638,6 +638,15 @@
         ```
 
 
+### 16.关于依赖优化
+- implementation：
+    - 只能在内部使用此模块，比如我在一个libiary中使用implementation依赖了gson库，然后我的主项目依赖了libiary，那么，我的主项目就无法访问gson库中的方法。这样的好处是编译速度会加快，推荐使用implementation的方式去依赖
+- compile（api）
+    - 这种是我们最常用的方式，使用该方式依赖的库将会参与编译和打包。 
+- compileOnly
+    - 使用场景：有多个library,只要确保有一个module中该依赖能参与到打包即可，其他的可以使用compileOnly。运行时不需要，例如仅源代码注解或注释处理器
+
+
 
 
 
