--- a/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
@@ -24,7 +24,12 @@
 
 ### 01.磁盘沙盒的概述
 #### 1.1 项目背景说明
-- 
+
+
+#### 1.2 沙盒作用
+
+
+#### 1.3 设计目标
 
 
 ### 04.一些技术要点说明
@@ -83,6 +88,23 @@
                 }
             } else {
                 super.onBackPressed();
+            }
+        }
+      
+        /**
+         * 回退fragment任务栈操作
+         * @param fragment                  fragment
+         */
+        public void doBack(Fragment fragment) {
+            if (mFragments.contains(fragment)) {
+                mFragments.remove(fragment);
+                FragmentManager fm = getSupportFragmentManager();
+                //回退fragment操作
+                fm.popBackStack();
+                if (mFragments.isEmpty()) {
+                    //如果fragment栈为空，则直接关闭宿主activity
+                    finish();
+                }
             }
         }
         ```
