--- a/Read/ReadMeWiki/01.内存治理/01.内存监控优化方案.md
+++ b/Read/ReadMeWiki/01.内存治理/01.内存监控优化方案.md
@@ -1,13 +1,31 @@
 #### 目录介绍
-- 01.为何要做内存优化
-- 03.内存优化的目标
+- 01.内存优化的概述
+    - 1.1 项目背景说明
+    - 1.2 内存基础概念
+    - 1.3 内存分析工具
+    - 1.4 设计目标
+- 02.方案基础设计
+    - 2.1 整体架构图
+    - 2.2 UML设计图
+    - 2.3 关键流程图
+    - 2.4 接口设计图
+    - 2.5 模块间依赖关系
+- 04.一些技术要点说明
+    - 4.1 
+- 05.其他设计实践说明
+    - 5.1 性能设计
+    - 5.2 稳定性设计
+    - 5.3 灰度设计
+    - 5.4 降级设计
+    - 5.5 异常设计
 
 
 
 
-### 01.为何要做内存优化
+### 01.内存优化的概述
+#### 1.1 项目背景说明
 - 内存优化就是对内存问题的一个预防和解决，做内存优化能让应用挂得少、活得好和活得久。
-- 挂得少 “挂”指的是 Crash
+- 挂得少 “挂” 指的是 Crash
     - 导致 Android 应用 Crash 的原因有很多种，而做内存优化就能让我们的应用避免由内存问题引起的 Crash。 内存问题导致 Crash 的具体表现就是内存溢出异常 OOM，引起 OOM 的原因有多种。
 - 活得好指的是使用流畅
     - Android 中造成界面卡顿的原因有很多种，其中一种就是由内存问题引起的。 内存问题之所以会影响到界面流畅度，是因为垃圾回收（GC，Garbage Collection），在 GC 时，所有线程都要停止，包括主线程，当 GC 和绘制界面的操作同时触发时，绘制的执行就会被搁置，导致掉帧，也就是界面卡顿。 
@@ -16,15 +34,13 @@
     - 用户在移动设备上使用应用的过程中被打断是很常见的，如果我们的应用不能活到用户回来的时候，要用户再次进行操作的体验就会很差。
 
 
-### 03.内存优化的目标
-- 一期方案的目的在于分析线上oom的问题根源，到底是什么原因产生的内存泄露，并且泄露的用户中占比有多大
+### 1.4 设计目标
+- 一期方案的目的在于分析线上oom的问题根源，到底是什么原因产生的内存泄露，并且泄露的用户中占比有多大。
 - 线上问题分析
-    - 建立内存数据等相关指标数据，对指标问题进行梳理和定义
-    - 建立端上内存数据采集SDK，统计相关数据
+    - 建立内存数据等相关指标数据，对指标问题进行梳理和定义；建立端上内存数据采集SDK，统计相关数据
     - 分析线上数据，特别是Android 5.0～Android 7.0 这个区间、Android8.0以上的用户，对Ram 大小信息进行分析归类
 - 线下问题分析
-    - 建立so内存监控能力，分析so占用大小问题
-    - 对各种内存泄露问题case进行编写测试，复现相关场景
+    - 建立so内存监控能力，分析so占用大小问题；对各种内存泄露问题case进行编写测试，复现相关场景
 
 
 
