--- a/Read/ReadJavaWiki/08.类的加载/02.对象创建过程.md
+++ b/Read/ReadJavaWiki/08.类的加载/02.对象创建过程.md
@@ -1,5 +1,6 @@
 #### 目录介绍
 - 01.对象的创建条件
+    - 1.1 new指令创建
 - 02.对象的内存布局
     - 2.1 对象头
     - 2.2 实例数据
@@ -12,12 +13,12 @@
     - 4.1 如何创建
     - 4.2 最佳存储模型
     - 4.3 如何访问
-- 05.对象的访问定位
 
 
 
 
 ### 01.对象的创建条件
+#### 1.1 new指令创建
 - 1.虚拟机遇到一个new指令时，首先将去检查这个指令的参数是否能在常量池中定位到一个类的符号引用；
 - 2.检查这个符号引用代表的类是否已经被加载，解析和初始化过。如果没有，那必须先执行响应的类加载过程；
 - 3.在类加载检查功通过后，为新生对象分配内存。对象所需的内存大小在类加载完成后便可完全确定。
@@ -115,10 +116,7 @@
     - 1.如何创建。2.什么是最佳存储模型。3.如何访问。
 
 
-
-
-
-### 05.对象的访问定位
+#### 4.3 如何访问
 - 对象创建起来之后，就会在虚拟机栈中维护一个本地变量表，用于存储基础类型和基础类型的值，引用类型与引用类型的值。
 - 其中引用类型的值就是堆中对象地址。如何引用堆中地址有两种方式：
     * 句柄：在堆中维护一个句柄池，句柄中包含了对象地址，当对象改变的时候，只需改变句柄，不需要改变栈中本地变量表的引用
