--- a/Read/ReadJavaWiki/08.类的加载/03.Java类加载器.md
+++ b/Read/ReadJavaWiki/08.类的加载/03.Java类加载器.md
@@ -1,12 +1,13 @@
 #### 目录介绍
 - 01.类加载器分类
-    * 1.1 类加载器的概述
-    * 1.2 类加载器的分类
-    * 1.3 类加载器的作用
-- 02.类加载器工作机制
-    - 2.1 类的加载定义
-    - 2.2 类加载器工作机制
-
+    - 1.1 类加载器的概述
+    - 1.2 类加载器的分类
+    - 1.3 类加载器工作机制
+- 02.类的生命周期
+    - 2.1 什么是类的生命周期
+    - 2.2 生命周期顺序图
+- 03.ClassLoader加载过程
+    - 3.1 Classloader作用
 
 
 
@@ -16,82 +17,66 @@
     - 负责读取 Java 字节代码，将.class文件加载到内存中，并转换成java.lang.Class类的一个实例对象；
 - 那么有人会问.class文件是哪里来的
     - 它是由javac编译器将java文件编译成.class文件的。
+- 类加载器的分类
+    - Bootstrap ClassLoader 根类加载器(引导类加载器)
+    - Extension ClassLoader 扩展类加载器
+    - System ClassLoader    系统类加载器
+    - Application ClassLoader   应用程序类加载器
+    - 自定义加载器，通过继承ClassLoader实现，一般是加载我们的自定义类
+- 类的加载详细定义
+    - 类进行初始化，当程序要使用某个类时，如果该类还未被加载到内存中，则系统会通过加载，连接，初始化三步来实现对这个类进行初始化。
+    - 更加详细一点说，类的加载指的是将类的.class文件中的二进制数据读入到内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个java.lang.Class对象，用来封装类在方法区内的数据结构。类的加载的最终产品是位于堆区中的Class对象，Class对象封装了类在方法区内的数据结构，并且向Java程序员提供了访问方法区内的数据结构的接口。
+    - 在Java语言里，类型的加载、连接和初始化过程都是在程序运行期间完成的，这种策略虽然会令类加载时稍微增加一些性能开销，但是会为Java应用程序提供高度的灵活性，Java里天生可以动态扩展的语言特性就是依赖运行期动态加载和动态连接这个特点来实现的。
 
 
-
-
-#### 1.2 类加载器的分类
-- Bootstrap ClassLoader 根类加载器(引导类加载器)
-- Extension ClassLoader 扩展类加载器
-- System ClassLoader    系统类加载器
-- Application ClassLoader   应用程序类加载器
-
-
-
-
-#### 1.3 类加载器的作用
-- 1.3.1 Bootstrap ClassLoader 根类加载器
+#### 1.2 类加载器的作用
+- Bootstrap ClassLoader 根类加载器
     - 也被称为引导类加载器，负责Java核心类的加载；比如System,String等。在JDK中JRE的lib目录下rt.jar文件中
     - 由C++语言实现（针对HotSpot）,负责将存放在<JAVA_HOME>\lib目录或-Xbootclasspath参数指定的路径中的类库加载到内存中，即负责加载Java的核心类。
-- 1.3.2 Extension ClassLoader 扩展类加载器
+- Extension ClassLoader 扩展类加载器
     - 负责JRE的扩展目录中jar包的加载。在JDK中JRE的lib目录下ext目录
-- 1.3.3 Sysetm ClassLoader 系统类加载器
+- System ClassLoader 系统类加载器
     - 负责在JVM启动时加载来自java命令的class文件，以及classpath环境变量所指定的jar包和类路径
-- 1.3.4 Application ClassLoader
+- Application ClassLoader 应用程序类加载器
     - 负责加载用户类路径（classpath）上的指定类库，我们可以直接使用这个类加载器，通过ClassLoader.getSystemClassLoader()方法直接获取。一般情况，如果我们没有自定义类加载器默认就是用这个加载器。
 
 
 
-### 02.类加载器工作机制
-#### 2.1 类的加载定义
-- 类进行初始化
-    - 当程序要使用某个类时，如果该类还未被加载到内存中，则系统会通过加载，连接，初始化三步来实现对这个类进行初始化。
-- 更加详细一点说，类的加载指的是将类的.class文件中的二进制数据读入到内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个java.lang.Class对象，用来封装类在方法区内的数据结构。类的加载的最终产品是位于堆区中的Class对象，Class对象封装了类在方法区内的数据结构，并且向Java程序员提供了访问方法区内的数据结构的接口。
-- 在Java语言里，类型的加载、连接和初始化过程都是在程序运行期间完成的，这种策略虽然会令类加载时稍微增加一些性能开销，但是会为Java应用程序提供高度的灵活性，Java里天生可以动态扩展的语言特性就是依赖运行期动态加载和动态连接这个特点来实现的。
+#### 1.3 类加载器工作机制
+- 是虚拟机把描述类的数据从Class文件加载到内存，并对数据进行校验、转换解析和初始化，最终形成可被虚拟机直接使用的Java类型的过程。
+- 另外，类型的加载、连接和初始化过程都是在程序运行期完成的，从而通过牺牲一些性能开销来换取Java程序的高度灵活性。
 
 
-
-#### 2.2 类加载器工作机制
-- 是虚拟机把描述类的数据从Class文件加载到内存，并对数据进行校验、转换解析和初始化，最终形成可被虚拟机直接使用的Java类型的过程。另外，类型的加载、连接和初始化过程都是在程序运行期完成的，从而通过牺牲一些性能开销来换取Java程序的高度灵活性。下面介绍类加载每个阶段的任务： 
+### 02.类的生命周期
+#### 2.1 什么是类的生命周期
+- 类加载的过程包括了加载、验证、准备、解析、初始化五个阶段。
+- 在这五个阶段中，加载、验证、准备和初始化这四个阶段发生的顺序是确定的，而解析阶段则不一定，它在某些情况下可以在初始化阶段之后开始，这是为了支持Java语言的运行时绑定（也成为动态绑定或晚期绑定）。
+- 另外注意这里的几个阶段是按顺序开始，而不是按顺序进行或完成，因为这些阶段通常都是互相交叉地混合进行的，通常在一个阶段执行的过程中调用或激活另一个阶段。
+- 下面介绍类加载每个阶段的任务： 
     - 加载（Loading）：通过类的全限定名来获取定义此类的二进制字节流；将该二进制字节流所代表的静态存储结构转化为方法区的运行时数据结构，该数据存储数据结构由虚拟机实现自行定义；在内存中生成一个代表这个类的java.lang.Class对象，它将作为程序访问方法区中的这些类型数据的外部接口
     - 验证（Verification）：确保Class文件的字节流中包含的信息符合当前虚拟机的要求，包括文件格式验证、元数据验证、字节码验证和符号引用验证
     - 准备（Preparation）：为类变量分配内存，因为这里的变量是由方法区分配内存的，所以仅包括类变量而不包括实例变量，后者将会在对象实例化时随着对象一起分配在Java堆中；设置类变量初始值，通常情况下零值
     - 解析（Resolution）：虚拟机将常量池内的符号引用替换为直接引用的过程
     - 初始化（Initialization）：是类加载过程的最后一步，会开始真正执行类中定义的Java字节码。而之前的类加载过程中，除了在『加载』阶段用户应用程序可通过自定义类加载器参与之外，其余阶段均由虚拟机主导和控制
 
+#### 2.2 生命周期顺序图
+- 这7个阶段发生顺序如下图：
+    - ![](http://upload-images.jianshu.io/upload_images/3985563-0108cc612a217322.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+- **其中加载，验证，准备，解析及初始化是属于类加载机制中的步骤。注意此处的加载不等同于类加载**。如何理解这句话？
+
+
+
+### 03.ClassLoader加载过程
+#### 3.1 Classloader作用
+- Classloader的作用，概括来说就是将编译后的class装载、加载到机器内存中，为了以后的程序的执行提供前提条件。
+- 每个被ClassLoader加载的class文件，最终都会以Class类的实例被程序员引用，我们可以把Class类当作是普通类的一个模板，JVM根据这个模板生成对应的实例，最终被程序员所使用。
 
 
 
 
 
-
-### 01.分类说明
-- 系统类加载器
-    - BootClassLoader：**预加载常用类**，由 Java 实现，继承 ClassLoader
-    - PathClassLoader：**加载系统类和应用程序的类**，继承 BaseDexClassLoader，没有参数 optimizedDirectory（给了默认 /data/dalvik-cache）无法定义解压的 dex 文件存储路径，常用来加载已经安装 apk 的 dex 文件（/data/dalvik-cache）
-    - DexClassLoader：加载 dex 文件以及包含 dex 的压缩文件（apk 和 jar 文件），继承 BaseDexClassLoader，
-- 自定义加载器
-    - 自定义加载器，通过继承ClassLoader实现，一般是加载我们的自定义类
-
-- 类加载器种类？
-    - 启动类加载器，Bootstrap ClassLoader，加载JACA_HOME\lib，或者被-Xbootclasspath参数限定的类
-    - 扩展类加载器，Extension ClassLoader，加载\lib\ext，或者被java.ext.dirs系统变量指定的类
-    - 应用程序类加载器，Application ClassLoader，加载ClassPath中的类库
-    - 自定义类加载器，通过继承ClassLoader实现，一般是加载我们的自定义类
-
-
-### 02.其他的类
-* ClassLoader：抽象类，定义一些主要功能，BootClassLoader 是它的内部类
-* SecureClassLoader：拓展 CLassLoader 类加入权限方面的功能，加强了 ClassLoader 的安全性
-* URLClassLoader：继承 SecureClassLoader ，通过 URL路径从 jar 文件和文件夹中加载类和资源
-* InMemoryDexClassLoader：加载内存中的 dex 文件
-* BaseDexClassLoader：继承自 ClassLoader，是抽象类 ClassLoader 的具体实现类
-
-
-
-### 03.ClasLoader加载过程
 - 和 Java 一样都遵循双亲委托机制。
-    ```java
+    ``` java
     protected Class<?> loadClass(String name, boolean resolve) 
         throws ClassNotFoundException {
             //检测是否已经加载过,若加载过，则直接返回
@@ -121,7 +106,7 @@
     }
     ```
 - BaseDexClassLoader#findClass
-    ```java
+    ``` java
     @Override
     protected Class<?> findClass(String name) throws ClassNotFoundException {
         List<Throwable> suppressedExceptions = new ArrayList<Throwable>();
@@ -135,7 +120,7 @@
     }
     ```
 - DexPathList#findClass
-    ```java
+    ``` java
     public Class<?> findClass(String name, List<Throwable> suppressed) {
        //Element 内部封装 DexFile 用于加载 dex
        for (Element element : dexElements) {
@@ -149,7 +134,7 @@
     }
     ```
 - Element#findClass
-    ```java
+    ``` java
     public Class<?> findClass(String name, ClassLoader definingContext,
             List<Throwable> suppressed) {
         //dexFile.loadClassBinaryName
@@ -157,7 +142,7 @@
     }
     ```
 - DexFile#loadClassBinaryName
-    ```java
+    ``` java
     public Class loadClassBinaryName(String name, ClassLoader loader, List<Throwable> suppressed) {
         return defineClass(name, loader, mCookie, this, suppressed);
     }
@@ -178,10 +163,6 @@
     ```
 
 
-
-### 01.Classloader作用
-- Classloader的作用，概括来说就是将编译后的class装载、加载到机器内存中，为了以后的程序的执行提供前提条件。
-- 每个被ClassLoader加载的class文件，最终都会以Class类的实例被程序员引用，我们可以把Class类当作是普通类的一个模板，JVM根据这个模板生成对应的实例，最终被程序员所使用。
 
 
 
