--- a/Read/ReadMeWiki/00.性能监控/04.Studio profiler.md
+++ b/Read/ReadMeWiki/00.性能监控/04.Studio profiler.md
@@ -150,7 +150,8 @@
 
 ### 参考内容
 - https://blog.csdn.net/u011578734/article/details/109496667
-
+- https://www.jianshu.com/p/a934df19c42e
+- 性能优化文档：https://blog.csdn.net/u011578734/category_7009042.html
 
 
 
