--- a/Read/ReadMeWiki/00.方案实践/13.线程优化实践操作.md
+++ b/Read/ReadMeWiki/00.方案实践/13.线程优化实践操作.md
@@ -1,6 +1,8 @@
 #### 目录介绍
 - 01.线程优化的背景
     - 1.1 实践背景说明
+    - 1.2 线程优化为何难
+    - 1.3 使用工具分析线程
 - 02.线程使用的现状
     - 2.1 线程使用问题
     - 2.2 线程问题有哪些
@@ -30,6 +32,12 @@
 
 ### 01.线程优化的背景
 #### 1.1 实践背景说明
+
+
+#### 1.2 线程优化为何难
+
+
+#### 1.3 使用工具分析线程
 
 
 ### 02.线程使用的现状
