--- a/Read/ReadMeWiki/01.内存治理/01.内存监控优化方案.md
+++ b/Read/ReadMeWiki/01.内存治理/01.内存监控优化方案.md
@@ -1,15 +1,20 @@
 #### 目录介绍
 - 01.内存优化的概述
     - 1.1 项目背景说明
-    - 1.2 内存基础概念
+    - 1.2 遇到问题介绍
     - 1.3 内存分析工具
     - 1.4 设计目标
-- 02.方案基础设计
-    - 2.1 整体架构图
-    - 2.2 UML设计图
-    - 2.3 关键流程图
-    - 2.4 接口设计图
-    - 2.5 模块间依赖关系
+- 02.内存信息解读介绍
+    - 2.1 一些名次解释
+    - 2.2 查手机运行内存信息
+    - 2.3 获取Android Dalvik配置信息
+    - 2.4 获取指定Apk的内存信息
+- 03.方案基础设计
+    - 3.1 整体架构图
+    - 3.2 UML设计图
+    - 3.3 关键流程图
+    - 3.4 接口设计图
+    - 3.5 模块间依赖关系
 - 04.一些技术要点说明
     - 4.1 
 - 05.其他设计实践说明
@@ -34,13 +39,165 @@
     - 用户在移动设备上使用应用的过程中被打断是很常见的，如果我们的应用不能活到用户回来的时候，要用户再次进行操作的体验就会很差。
 
 
-### 1.4 设计目标
+#### 1.2 遇到问题介绍
+- 问题描述：
+    - OOM不知道是从哪里开始出现的，没办法确定具体引发OOM的地方
+- 问题分析：
+    -  在OOM的时候如果去获取内存信息基本上是获取不到呢？原因是已经内存不足了，无法在创建数据
+- 修改建议：
+    - 可以在临近OOM的时候提前获取一下内存的数据信息，来辅助问题定位
+
+
+
+#### 1.4 设计目标
 - 一期方案的目的在于分析线上oom的问题根源，到底是什么原因产生的内存泄露，并且泄露的用户中占比有多大。
 - 线上问题分析
     - 建立内存数据等相关指标数据，对指标问题进行梳理和定义；建立端上内存数据采集SDK，统计相关数据
     - 分析线上数据，特别是Android 5.0～Android 7.0 这个区间、Android8.0以上的用户，对Ram 大小信息进行分析归类
 - 线下问题分析
     - 建立so内存监控能力，分析so占用大小问题；对各种内存泄露问题case进行编写测试，复现相关场景
+
+
+### 02.内存信息解读介绍
+#### 2.1 一些名次解释
+- VSS	 
+    - Virtual Set Size 虚拟耗用内存（包含共享库占用的内存）
+- RSS	 
+    - Resident Set Size 实际使用物理内存（包含共享库占用的内存）
+- PSS	
+    - Proportional Set Size 实际使用的物理内存（比例分配共享库占用的内存）
+- USS	
+    - Unique Set Size 进程独自占用的物理内存（不包含共享库占用的内存）
+- 大小规律：
+    - 一般来说内存占用大小有如下规律：VSS >= RSS >= PSS >= USS
+
+
+
+#### 2.2 查手机运行内存信息
+- 使用adb
+    - adb shell cat /proc/meminfo
+    - 具体信息看image中图片：手机运行内存信息
+- 下面先对"/proc/meminfo"文件里列出的字段进行粗略解释：
+    ```
+    MemTotal	所有可用RAM大小
+    MemFree	LowFree与HighFree的总和，被系统留着未使用的内存
+    Buffers	用来给文件做缓冲大小
+    Cached	 被高速缓冲存储器（cache memory）用的内存的大小（等于diskcache minus SwapCache）
+    SwapCached	被高速缓冲存储器（cache memory）用的交换空间的大小。已经被交换出来的内存，仍然被存放在swapfile中，用来在需要的时候很快的被替换而不需要再次打开I/O端口。
+    Active	在活跃使用中的缓冲或高速缓冲存储器页面文件的大小，除非非常必要，否则不会被移作他用。
+    Inactive	在不经常使用中的缓冲或高速缓冲存储器页面文件的大小，可能被用于其他途径。
+    SwapTotal	交换空间的总大小。
+    SwapFree	未被使用交换空间的大小。
+    Dirty	 等待被写回到磁盘的内存大小。
+    Writeback	 正在被写回到磁盘的内存大小。
+    AnonPages	未映射页的内存大小。
+    Mapped	设备和文件等映射的大小。
+    Slab	内核数据结构缓存的大小，可以减少申请和释放内存带来的消耗。
+    SReclaimable	:可收回Slab的大小。
+    SUnreclaim	不可收回Slab的大小（SUnreclaim+SReclaimable＝Slab）。
+    PageTables	管理内存分页页面的索引表的大小
+    NFS_Unstable	不稳定页表的大小。
+    ```
+ 
+#### 2.3 获取Android Dalvik配置信息
+- adb指令
+    - adb shell getprop|grep vm 
+- 下面先对"adb shell getprop|grep vm" 文件里列出的字段进行粗略解释：
+    ```
+    dalvik.vm.checkjni	是否要执行扩展的JNI检查，CheckJNI是一种添加额外JNI检查的模式；出于性能考虑，这些选项在默认情况下并不会启用。此类检查将捕获一些可能导致堆损坏的错误，例如使用无效/过时的局部和全局引用。如果这个值为false，则读取ro.kernel.android.checkjni的值
+    ro.kernel.android.checkjni	只读属性，是否要执行扩展的JNI检查。当dalvik.vm.checkjni为false，此值才生效
+    dalvik.vm.execution-mode	Dalvik虚拟机的执行模式，即：所使用的解释器，下文会讲解
+    dalvik.vm.stack-trace-file	指定堆栈跟踪文件路径
+    dalvik.vm.check-dex-sum	是否要检查dex文件的校验和
+    log.redirect-stdio	是否将stdout/stderr转换成log消息
+    dalvik.vm.enableassertions	是否启用断言
+    dalvik.vm.jniopts	JNI可选配置
+    dalvik.vm.heapstartsize	堆的起始大小
+    dalvik.vm.heapsize	堆的大小
+    dalvik.vm.jit.codecachesize	JIT代码缓存大小
+    dalvik.vm.heapgrowthlimit	堆增长的限制
+    dalvik.vm.heapminfree	堆的最小剩余空间
+    dalvik.vm.heapmaxfree	堆的最大剩余空间
+    dalvik.vm.heaptargetutilization	理想的堆内存利用率，其取值位于0与1之间
+    ro.config.low_ram	该设备是否是低内存设备
+    dalvik.vm.dexopt-flags	是否要启用dexopt特性，例如字节码校验以及为精确GC计算寄存器映射
+    dalvik.vm.lockprof.threshold	控制Dalvik虚拟机调试记录程序内部锁资源争夺的阈值
+    dalvik.vm.jit.op	对于指定的操作码强制使用解释模式
+    dalvik.vm.jit.method	对于指定的方法强制使用解释模式
+    dalvik.vm.extra-opts	其他选项
+    ```
+
+
+#### 2.4 获取指定Apk的内存信息
+- adb指令
+    - adb shell dumpsys meminfo org.yczbj.ycvideoplayer
+    - 注意：org.yczbj.ycvideoplayer需要换成你需要的apk包名
+- 如下所示，内存信息
+    - 一般情况下我们只需要关心 PSS Total + Private Dirty
+    ```
+    didi1@DIDI-C02F31XVML7H ~ % adb shell dumpsys meminfo org.yczbj.ycvideoplayer
+    Applications Memory Usage (in Kilobytes):
+    Uptime: 244969974 Realtime: 284504287
+    
+    ** MEMINFO in pid 26970 [org.yczbj.ycvideoplayer] **
+                       Pss  Private  Private  SwapPss      Rss     Heap     Heap     Heap
+                     Total    Dirty    Clean    Dirty    Total     Size    Alloc     Free
+                    ------   ------   ------   ------   ------   ------   ------   ------
+      Native Heap    48414    48344        0       88    49336    58300    21743    36556
+      Dalvik Heap     2191     2008       80      238     2948     3560     2670      890
+     Dalvik Other     1507      904       60        3     2332                           
+            Stack      612      612        0        0      620                           
+           Ashmem        2        0        0        0       16                           
+        Other dev       28        0       28        0      360                           
+         .so mmap    12733      360     4204       94    47200                           
+        .jar mmap     1138        0        4        0    34968                           
+        .apk mmap      410        0        0        0    12908                           
+        .ttf mmap       33        0        0        0      376                           
+        .dex mmap     5688        4     5680        0     5836                           
+        .oat mmap      309        0        0        0     3756                           
+        .art mmap    11974     9332     1540      403    22552                           
+       Other mmap      754        8       76        0     5972                           
+          Unknown      803      776        4        6     1056                           
+            TOTAL    87428    62348    11676      832   190236    61860    24413    37446
+     
+     App Summary
+                           Pss(KB)                        Rss(KB)
+                            ------                         ------
+               Java Heap:    12880                          25500
+             Native Heap:    48344                          49336
+                    Code:    10252                         106144
+                   Stack:      612                            620
+                Graphics:        0                              0
+           Private Other:     1936
+                  System:    13404
+                 Unknown:                                    8636
+     
+               TOTAL PSS:    87428            TOTAL RSS:   190236       TOTAL SWAP PSS:      832
+     
+     Objects
+                   Views:       42         ViewRootImpl:        1
+             AppContexts:        5           Activities:        1
+                  Assets:       14        AssetManagers:        0
+           Local Binders:       19        Proxy Binders:       44
+           Parcel memory:        6         Parcel count:       24
+        Death Recipients:        0      OpenSSL Sockets:        0
+                WebViews:        0
+     
+     SQL
+             MEMORY_USED:        0
+      PAGECACHE_OVERFLOW:        0          MALLOC_SIZE:        0
+    ```
+
+
+
+
+
+
+
+
+
+
+
 
 
 
