--- a/Read/ReadShareWiki/01.精品专栏/00.能力提升系列的总纲.md
+++ b/Read/ReadShareWiki/01.精品专栏/00.能力提升系列的总纲.md
@@ -33,8 +33,10 @@
 
 
 ### 01.看过就以为做到
-- 微信公众号的文章我每篇都收藏了。”但是收藏不等于做到了。就像你学完的内容，这些知识还是别人的，不是你的。当学完后，这份学习的责任就递交给你了。什么时候才会真正的内化？首先需要实践，并从中得到反馈，经过这样的一个过程，才能把知识真正地内化。很多时候，我们都缺少了实践反馈机制。
-- 如何帮助你学得更好，在进行这次课程准备的时候，我曾问自己：现在大家不缺知识，不缺信息吧？答案是肯定的，而且每个人手上可能订阅的微信公众号有十几个，每天光看微信公众号都看不及，为什么大家会花时间来学习这样一个系列课呢？后来我找到了答案——我需要给大家更多的附加值。这个附加值不应该只是知识，而是怎么更有效地学习。这是我的要求，这个自我的要求会体现在整个系列课当中。
+- 看了很多书籍，看了很多博客，微信公众号文章收藏了很多。但是看过或者收藏不等于做到了。就像你学完的内容，这些知识还是别人的，不是你的。当学完后，这份学习的责任就递交给你了。
+- 什么时候才会真正的内化？首先需要实践，并从中得到反馈，经过这样的一个过程，才能把知识真正地内化。很多时候，我们都缺少了实践反馈机制。
+- 如何帮助你学得更好，在进行这次课程准备的时候，我曾问自己：现在大家不缺知识，不缺信息吧？答案是肯定的，而且每个人手上可能订阅的微信公众号有十几个，每天光看微信公众号都看不及，为什么大家会花时间来学习这样一个系列课呢？
+- 后来我找到了答案——我需要给大家更多的附加值。这个附加值不应该只是知识，而是怎么更有效地学习。这是我的要求，这个自我的要求会体现在整个系列课当中。
 
 
 
