--- a/Read/ReadJavaWiki/08.类的加载/01.类初始化操作.md
+++ b/Read/ReadJavaWiki/08.类的加载/01.类初始化操作.md
@@ -1,25 +1,37 @@
 #### 目录介绍
-- 01.用构造器确保初始化
+- 01.为何需要构造器
+    - 1.1 构造器的背景
+    - 1.2 默认构造器
+    - 1.3 构造器用于初始化
 - 02.方法重载
-- 03.缺省构造器
-- 04.this关键字说明
-- 05.成员初始化
-- 10.类执行测试案例
-    - 10.1 类名.变量加载类
-    - 10.2 new加载类
-    - 10.3 代码块和构造执行顺序
-    - 10.4 得出结论
+- 03.this关键字说明
+- 04.成员初始化
+    - 4.1 初始化的顺序
+    - 4.2 初始化说明和案例
+    - 4.3 得出结论
 
 
-### 01.用构造器确保初始化
-- 创建对象时，如果其类具有构造器，Java就会在用户有能力操作对象之前自动调用相应的构造器，从而保证了初始化的进行。
-    - 不接受任何参数的构造器叫做默认构造器，Java文档中通常使用术语无参构造器。
-- 假设类Tree 有一个构造器，它接受一个整型变量来表示树的高度，那它就能这样创建一个Tree对象。
-    - Tree t = new Tree（12）；
-    - 如果Tree（int）是Tree类中唯一的构造器，那么编译器将不会允许你以其他任何方式创建Tree对象。
+
+
+### 01.为何需要构造器
+#### 1.1 构造器的背景
 - 构造器有助于减少错误，并使代码更易于阅读。
     - 从概念上讲，“初始化”与“创建”是彼此独立的，然而在上面的代码中，你找不到对initialize()方法的调用。
     - 在Java中，“初始化”和“创建”捆绑在一起，两者不能分离。
+
+
+#### 1.2 默认构造器
+- 默认构造器。
+    - 如果写的类中没有构造器，则编译器会自动帮你创建一个默认的构造器。
+    - 如果已经定义了一个构造器（无论是否有参数），编译器就不会自动帮你创建默认构造器。 
+
+
+#### 1.3 构造器用于初始化
+- 创建对象时，如果其类具有构造器，Java就会在用户有能力操作对象之前自动调用相应的构造器，从而保证了初始化的进行。
+    - 不接受任何参数的构造器叫做默认构造器，Java文档中通常使用术语无参构造器。
+- 假设类`Tree`有一个构造器，它接受一个整型变量来表示树的高度，那它就能这样创建一个`Tree`对象。
+    - Tree t = new Tree（12）；
+    - 如果Tree（int）是Tree类中唯一的构造器，那么编译器将不会允许你以其他任何方式创建Tree对象。
 - 构造器是一种特殊类型的方法，因为它没有返回值，这与返回值为空明显不同。
     - 对于空返回值，尽管方法本身不会自动返回什么，但仍选择让它返回别的东西。构造器则不会返回任何东西你别无选择（new表达式确实返回了对新建对象的引用，但构造器本身并没有任何返回值）。
 
@@ -32,6 +44,9 @@
 - 假如我们有多种多样的需求，想要初始化不同形态的对象，这时候我们可能需要多个构造器才能满足需求。
     - 而构造器的名字又是固定的，所以这个时候变化的就是参数类型或者是参数个数。
     - 我们把这种方法名不变，只改变参数类型或者参数个数的操作叫做方法重载。方法重载不仅支持构造器方法重载，也支持普通方法的重载。
+
+
+#### 2.1 基本类型的重载
 - 涉及基本类型的重载。
     - 基本类型能从一个“较小”的类型自动提升至一个“较大”的类型。比如传入参数为常数5，某一个重载方法接受int型参数，它就会被调用。如果传入的数据类型（实际参数类型）小于方法中声明的形式参数类型，实际数据类型就会被提升。
     - char型略有不同，如果无法找到恰好接受char参数的方法，就会把char直接提升至int型。 
@@ -41,17 +56,11 @@
 
 
 
-### 03.缺省构造器
-- 默认构造器。
-    - 如果写的类中没有构造器，则编译器会自动帮你创建一个默认的构造器。
-    - 如果已经定义了一个构造器（无论是否有参数），编译器就不会自动帮你创建默认构造器。 
-
-
-### 04.this关键字说明
+### 03.this关键字说明
 - this关键字也是Java中尤为重要的一个关键字，主要有三个作用：
 - 1.表示当前对象的引用，并返回当前对象，用法如下：
     - doFunc（）方法返回的是一个ThisTest类型的值，所以此处使用return this，返回了该类型对象的引用。
-    ```java
+    ``` java
     public class ThisTest{
     	public ThisTest doFunc(){
     		return this;
@@ -63,7 +72,7 @@
     ```
 - 2.表示类的成员变量
     - 在有的构造函数中，形参与成员变量使用同一个字符串，这时候可以用this来区分，带有this的表示成员变量，用法如下：
-    ```java
+    ``` java
     public class ThisTest{
     	private String arg;
     	ThisTest(String arg){
@@ -93,25 +102,12 @@
     ```
 
 
-### 05.成员初始化
-- 初始化的顺序是，先静态对象，而后是“非静态对象”。
-- 构造器初始化。
-    - 可以使用构造器进行初始化，但是自动初始化将会在构造器被调用之前发生。
-- 静态数据的初始化。
-    - 无论创建多少个对象，静态数据都只占用一份存储区域。
-    - static关键字不能应用于局部变量，因此它只能作用于域。如果一个域是静态的基本类型域，且也没有对它进行初始化。那么它会获得基本类型的标准初值。如果它是一个对象引用，那么它的默认初始值就是null。静态初始化动作只进行一次：当首次生成这个类的一个对象时，或者首次访问属于这个类的静态成员时（即便从未生成过那个类的对象）。
-- 数组初始化。
-    - 数组只是相同类型的、用一个标识符名称封装到一起的一个对象序列或基本类型数据序列。拥有的只是对数组的一个引用。
-    - 数组的创建是在运行时刻进行的。可变参数列表。提供了一种方便的语法来创建对象并调用方法。由于所以的类都直接或间接继承于Object类，所以可以创建以Object数组为参数的方法。
-- 枚举类型。
-    - 当创建枚举时，编译器会自动添加一些有用的特性，比如toString()方法，显示某个enum实例的名字。ordinal()方法，用来表示某个特定enum常量的声明顺序。
-    - static values()，用来按照enum常量的声明顺序，产生由这些常量值构成的数组。
-
-
-### 10.类执行测试案例
-#### 10.1 类名.变量加载类
-- 代码案例如下所示
-    ```
+### 04.成员初始化
+#### 4.1 初始化的顺序
+- 初始化的顺序是
+    - 先静态对象，而后是“非静态对象”。
+- 类名.变量加载类，代码案例如下所示：
+    ``` java
     class A{
         public static int value = 134;
         static{
@@ -177,9 +173,21 @@
 
 
 
-#### 10.2 new加载类
-- 那么如果是直接使用new创建对象？
-    ```
+
+#### 4.2 初始化说明
+- 构造器初始化。
+    - 可以使用构造器进行初始化，但是自动初始化将会在构造器被调用之前发生。
+- 静态数据的初始化。
+    - 无论创建多少个对象，静态数据都只占用一份存储区域。
+    - static关键字不能应用于局部变量，因此它只能作用于域。如果一个域是静态的基本类型域，且也没有对它进行初始化。那么它会获得基本类型的标准初值。如果它是一个对象引用，那么它的默认初始值就是null。静态初始化动作只进行一次：当首次生成这个类的一个对象时，或者首次访问属于这个类的静态成员时（即便从未生成过那个类的对象）。
+- 数组初始化。
+    - 数组只是相同类型的、用一个标识符名称封装到一起的一个对象序列或基本类型数据序列。拥有的只是对数组的一个引用。
+    - 数组的创建是在运行时刻进行的。可变参数列表。提供了一种方便的语法来创建对象并调用方法。由于所以的类都直接或间接继承于Object类，所以可以创建以Object数组为参数的方法。
+- 枚举类型。
+    - 当创建枚举时，编译器会自动添加一些有用的特性，比如toString()方法，显示某个enum实例的名字。ordinal()方法，用来表示某个特定enum常量的声明顺序。
+    - static values()，用来按照enum常量的声明顺序，产生由这些常量值构成的数组。
+- 直接使用new创建对象，看下加载顺序，测试案例：
+    ``` java
     class A{
         public static int value = 134;
         static{
@@ -212,12 +220,8 @@
     构造A
     构造B
     ```
-
-
-
-#### 10.3 代码块和构造执行顺序
-- 代码如下所示
-    ```
+- 代码块和构造执行顺序，代码如下所示
+    ``` java
     public class C {
         {
             System.out.println("代码块C");
@@ -251,10 +255,7 @@
     ```
 
 
-
-
-
-#### 10.4 得出结论
+#### 4.3 得出结论
 - 得出结论
     - 当遇到 类名.变量 加载时，只加载变量所在类。
     - 当遇到new加载类时，先执行父类，在执行子类。
