--- a/Read/ReadMeWiki/10.其他重要/03.Linux基本命令.md
+++ b/Read/ReadMeWiki/10.其他重要/03.Linux基本命令.md
@@ -1,7 +1,6 @@
 #### 目录介绍
-- 01.常见基础命令
-- 02.目录切换命令
-- 03.目录的操作命令（增删改查）
+- 01.Linux文件系统概览
+- 02.目录相关的命令
 - 04.文件的操作命令（增删改查）
 - 05.压缩文件的操作命令
 - 06.Linux的权限命令
@@ -11,11 +10,43 @@
 
 
 
-### 01.常见基础命令
-- 下面只是给出了一些比较常用的命令。推荐一个Linux命令快查网站，非常不错，大家如果遗忘某些命令或者对某些命令不理解都可以在这里得到解决。Linux命令大全：[http://man.linuxde.net/](http://man.linuxde.net/)
+### 01.Linux文件系统概览
+#### 1.1 Linux文件系统简介
+- 在Linux操作系统中，所有被操作系统管理的资源，例如网络接口卡、磁盘驱动器、打印机、输入输出设备、普通文件或是目录都被看作是一个文件。
+- 也就是说在LINUX系统中有一个重要的概念：**一切都是文件**。其实这是UNIX哲学的一个体现，而Linux是重写UNIX而来，所以这个概念也就传承了下来。在UNIX系统中，把一切资源都看作是文件，包括硬件设备。UNIX系统把每个硬件都看成是一个文件，通常称为设备文件，这样用户就可以用读写文件的方式实现对硬件的访问。
 
 
-### 02.目录切换命令
+#### 1.2 文件类型与目录结构
+- Linux支持5种文件类型 ：
+    - ![文件类型](https://user-gold-cdn.xitu.io/2018/7/3/1645f1a7d64def1a?w=901&h=547&f=png&s=72692)
+- Linux的目录结构如下：
+    - Linux文件系统的结构层次鲜明，就像一棵倒立的树，最顶层是其根目录：
+    - ![Linux的目录结构](https://user-gold-cdn.xitu.io/2018/7/3/1645f1c65676caf6?w=823&h=315&f=png&s=15226)
+- 常见目录说明：
+    - **/bin：** 存放二进制可执行文件(ls,cat,mkdir等)，常用命令一般都在这里；
+    - **/etc：**  存放系统管理和配置文件；
+    - **/home：**  存放所有用户文件的根目录，是用户主目录的基点，比如用户user的主目录就是/home/user，可以用~user表示；
+    - **/usr ：** 用于存放系统应用程序；
+    - **/opt：** 额外安装的可选应用程序包所放置的位置。一般情况下，我们可以把tomcat等都安装到这里；
+    - **/proc：**  虚拟文件系统目录，是系统内存的映射。可直接访问这个目录来获取系统信息；
+    - **/root：**	超级用户（系统管理员）的主目录（特权阶级^o^）；
+    - **/sbin:**	存放二进制可执行文件，只有root才能访问。这里存放的是系统管理员使用的系统级别的管理命令和程序。如ifconfig等；
+    - **/dev：**	用于存放设备文件；
+    - **/mnt：**	系统管理员安装临时文件系统的安装点，系统提供这个目录是让用户临时挂载其他的文件系统；
+    - **/boot：**	存放用于系统引导时使用的各种文件；
+    - **/lib ：**      存放着和系统运行相关的库文件 ；
+    - **/tmp：**	用于存放各种临时文件，是公用的临时文件存储点；
+    - **/var：**	用于存放运行时需要改变数据的文件，也是某些大文件的溢出区，比方说各种服务的日志文件（系统启动日志等。）等；
+    - **/lost+found：**	这个目录平时是空的，系统非正常关机而留下“无家可归”的文件（windows下叫什么.chk）就在这里。
+
+
+### 02.目录相关的命令
+#### 2.1 常见基础命令
+- 下面只是给出了一些比较常用的命令。推荐一个Linux命令快查网站，非常不错，大家如果遗忘某些命令或者对某些命令不理解都可以在这里得到解决。
+- Linux命令大全：[http://man.linuxde.net/](http://man.linuxde.net/)
+
+
+#### 2.2 目录切换命令
 - **`cd usr`：**		切换到该目录下usr目录 	
 - **`cd ..（或cd../）`：**	切换到上一层目录 
 - **`cd /`：**		切换到系统根目录 	
@@ -23,7 +54,7 @@
 - **`cd -`：**		切换到上一个所在目录
 
 
-### 03.目录的操作命令（增删改查）
+#### 2.3 目录的操作命令（增删改查）
 - **`mkdir 目录名称`：** 增加目录
 - **`ls或者ll`**（ll是ls -l的缩写，ll命令以看到该目录下的所有目录和文件的详细信息）：查看目录信息
 - **`find 目录 参数`：** 寻找目录（查）示例：
