完善沙盒file跳转图片

--- a/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
@@ -309,14 +309,54 @@
 - https://www.jianshu.com/p/d71afdf9c90a
 
 
+1.解决dokit升级后，一些工具不能使用bug，以及部分资源找不到问题
+2.代码覆盖度在debug下依赖，正式包下不依赖，优化配置
+3.修改dokit升级后，排查mock定位失效问题，fix 定位mock数据bug
+4.梳理权限合规需求，开发合规需求
 
 
 
 问题：
+
+1.前期写demo阶段：
+前期写demo，针对技术文档上技术点，快速开发，共排期9天。前期针对地图通信接口的梳理不充足，后期反复修改变动较大。
+
+2.中期开发需求阶段
+
+3.两端一起联调阶段
+联调这块，主要是涉及poi地图请求，以及地图拖动请求，归位高亮等逻辑，双方
+4.最后修改bug阶段
+提测自测不严谨
+
+
+
+
 1.自定义枚举，getInitParam方法不是public，报红提示
 2.除了设置弹窗正文，暴露设置标题，确定按钮和取消按钮设置文案的方法
 
+读写权限，全局搜索：
+这个是读取相册
+MediaStore.Images.Media
+MediaStore.Files
+MediaStore.Files
+
+查看FileUtils使用的地方文件操作
 
 
-
-
+    /**
+     * 跳转到首页
+     */
+    @JsInterface("popToRoot")
+    public void popToRoot(CallbackFunction function) {
+        Activity topActivity = ActivityManager.getInstance().peek();
+        if (topActivity==null || topActivity.isFinishing() || topActivity.isDestroyed()) {
+            mLogger.error("popToRoot error: Activity state error");
+            RiderJsBridgeHelper.Companion.callbackFail(function, RiderJsBridgeHelper.ERROR_MESSAGE_INVALID_STATE);
+            return;
+        }
+        //跳转到首页
+        Intent intent = new Intent(topActivity, RiderMainActivity.class);
+        intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        topActivity.startActivity(intent);
+        RiderJsBridgeHelper.Companion.callbackSuccess(function);
+    }
